--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,6 @@ a[href^="tel:"] {
   color: inherit;
   text-decoration: none;
 }
-
-body {
-    background-image: url("./../imgs/background.png");
-    background-color: white;
-}
-
-
 /*------ template stylization ------*/
 /* headings, text */
 h1,
@@ -150,7 +143,37 @@ a.underline:hover {
 .extra-wrap {
   overflow: hidden;
 }
-
+ul.list,
+ul.list-2 {
+  margin: 0;
+  list-style: none;
+}
+ul.list li {
+  padding: 5px 0 5px 13px;
+  background: url(../imgs/contactus/marker.gif) 0 12px no-repeat;
+  font-size: 12px;
+  line-height: 20px;
+}
+ul.list li a {
+  color: #ffffff;
+  text-decoration: underline;
+}
+ul.list li a:hover {
+  text-decoration: none;
+}
+ul.list-2 li {
+  padding: 5px 0 5px 13px;
+  background: url(../imgs/contactus/marker.gif) 0 12px no-repeat;
+  font-size: 12px;
+  line-height: 20px;
+}
+ul.list-2 li a {
+  color: #ffffff;
+  text-decoration: none;
+}
+ul.list-2 li a:hover {
+  text-decoration: underline;
+}
 /**/
 /* buttons*/
 .btn_ {
@@ -182,13 +205,529 @@ a.underline:hover {
   background: #ffffff;
 }
 /**/
+ 
+/*------ header ------- */
 
-
-
-#contact-us {
-    background-image: url("./../imgs/contactus/bg-content.jpg");
+.header-block {
+  background: url(../imgs/contactus/header-block.jpg) 0 0 repeat-x #1b1b1c;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+  position: relative;
+  z-index: 999;
 }
+.header-block-pad {
+  padding: 43px 31px 33px 450px;
+}
+h1.brand {
+  display: inline-block;
+  margin: 0px;
+  padding: 0;
+  text-transform: none;
+}
+h1.brand a {
+  display: block;
+  font-size: 0;
+  line-height: 0px;
+}
+h1.brand span {
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  line-height: 15px;
+  color: #737373;
+  font-weight: normal;
+  margin: -1px 0 0 2px;
+  letter-spacing: 0;
+}
+.contacts {
+  float: right;
+  display: inline-block;
+  margin: 7px 62px 0 0px;
+  padding: 6px 45px 10px 0;
+  color: #ffffff;
+  line-height: 22px;
+  background: url(../imgs/contactus/line-1.png) right 0 repeat-y;
+}
+.contacts span,
+.contacts a {
+  color: #747474;
+  text-decoration: none;
+}
+.contacts a:hover {
+  color: #fff;
+}
+/* search-form */.navbar-form {
+  background: url(../imgs/contactus/form-search.jpg) 0 0 repeat-x #1c1c1c;
+  border-bottom: #515152 1px solid;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  margin: 19px 0px 0 0;
+  float: right;
+}
+.navbar-form input {
+  background: none;
+  border: none;
+  box-shadow: none;
+  line-height: 18px;
+  width: 288px;
+  float: left;
+  margin: 0px;
+  padding-top: 6px;
+  padding-bottom: 5px;
+}
+.navbar-form input:focus {
+  box-shadow: none;
+}
+.navbar-form a {
+  margin: 0;
+  display: inline-block;
+  width: 40px;
+  height: 33px;
+  background: url(../imgs/contactus/search.png) 0 0 no-repeat;
+  float: right;
+}
+.navbar-form a:hover {
+  background: url(../imgs/contactus/search.png) right 0 no-repeat;
+}
+/**/
+/* navbar */
+.navbar_ {
+  margin: 0px 0 0 0;
+}
+.navbar_ .navbar-inner_ {
+  padding: 18px 0px 19px 436px;
+  margin: 0;
+  background: url(../imgs/contactus/navbar.png) 0 0 repeat-x;
+  border: none;
+  min-height: inherit;
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+}
+/*nav*/
+.navbar_ .container {
+  position: relative;
+}
+.nav-collapse_ {
+  float: left;
+  padding-top: 8px;
+}
+.nav-collapse_ .nav li {
+  margin: 0;
+  padding: 0;
+  position: relative;
+  zoom: 1;
+}
+.nav-collapse_ .nav > li {
+  background: url(../imgs/contactus/line-1.png) 0 0 repeat-y;
+  padding: 0 18px 0 18px;
+  line-height: 17px;
+}
+.nav-collapse_ .nav > li > a > em {
+  display: inline-block;
+  width: 17px;
+  height: 15px;
+  background: url(../imgs/contactus/home.png) 0 0 no-repeat;
+}
+.nav-collapse_ .nav > li.li-first {
+  background: none;
+  padding-left: 0;
+}
+.nav-collapse_ .nav li a {
+  line-height: 17px;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-shadow: none;
+  text-decoration: none;
+}
+.nav-collapse_ .nav > li > a {
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+}
+.nav-collapse_ .nav > li.li-first.sfHover a > em,
+.nav-collapse_ .nav > li.li-first:hover a > em,
+.nav-collapse_ .nav > li.li-first.active a > em,
+.nav-collapse_ .nav > li.li-first.active a > em {
+  background-position: right 0;
+}
+.nav-collapse_ .nav > li.sfHover > a,
+.nav-collapse_ .nav > li.sfHover > a:hover,
+.nav-collapse_ .nav > li > a:hover,
+.nav-collapse_ .nav > li.active > a,
+.nav-collapse_ .nav > li.active > a:hover {
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  color: #cf3046;
+  background: none;
+}
+.sub-menu > a {
+  position: relative;
+}
+.nav-collapse_ .nav > li.sub-menu > a:before {
+  content: " ";
+  position: absolute;
+  background: url('../imgs/contactus/li-marker.png') left top no-repeat;
+  width: 7px;
+  height: 5px;
+  right: 50%;
+  top: 50%;
+  margin: 10px -3px 0 0;
+}
+.nav-collapse_ .nav ul {
+  position: absolute;
+  display: none;
+  width: 158px;
+  left: 0px;
+  top: 37px;
+  list-style: none;
+  zoom: 1;
+  z-index: 9;
+  background: #111111;
+  padding: 20px 0 24px 0;
+  margin: 0;
+}
+.nav-collapse_ .nav > li li.sub-menu > a:before {
+  content: " ";
+  background: url('../imgs/contactus/li-marker.png') left top no-repeat;
+  position: absolute;
+  width: 7px;
+  height: 5px;
+  right: 10px;
+  top: 10px;
+}
+.nav-collapse_ .nav ul li a {
+  display: block;
+  text-transform: uppercase;
+  font-size: 11px;
+  line-height: 15px;
+  padding: 7px 10px 8px 24px;
+  background: none;
 
+}
+.nav-collapse_ .nav > li > ul li > a:hover,
+.nav-collapse_ .nav > li > ul li.sfHover > a {
+  text-decoration: none;
+  background: #fff;
+  color: #000;
+}
+.nav-collapse_ .nav ul ul {
+  position: absolute;
+  display: none;
+  width: 158px;
+  left: 158px;
+  top: -20px;
+  height: auto;
+  list-style: none;
+  z-index: 111;
+  background: #111111;
+  padding: 0 0 24px 0;
+  margin-top: 20px;
+}
+/**/
+/*social-icons*/
+.social-icons {
+  float: right;
+  display: inline-block;
+  margin: 0px 34px 0 0px;
+}
+.social-icons li {
+  float: left;
+  display: inline-block;
+  margin-left: 3px;
+}
+.social-icons li a {
+  display: block;
+}
+.social-icons li a:hover img {
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+}
+/**/
+/* slider */
+.slider {
+  position: relative;
+  z-index: 1;
+  padding: 0;
+  margin-top: -68px;
+}
+.camera_wrap {
+  margin-bottom: 0 !important;
+}
+.camera_thumb {
+  width: 150px;
+  height: auto;
+}
+.camera_wrap .camera_pag {
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  margin-left: -465px;
+  z-index: 999;
+}
+.camera_wrap .camera_pag .camera_pag_ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+.camera_wrap .camera_pag .camera_pag_ul li > span {
+  display: none;
+}
+.camera_wrap .camera_pag .camera_pag_ul li {
+  background: #b2b2b2;
+  width: 16px;
+  height: 16px;
+  display: block;
+  float: left;
+  margin-right: 6px;
+  cursor: pointer;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+}
+.camera_wrap .camera_pag .camera_pag_ul li:hover {
+  background: #373737;
+}
+.camera_wrap .camera_pag .camera_pag_ul li.cameracurrent {
+  background: #373737;
+  cursor: default;
+}
+.camera_caption {
+  display: none;
+}
+/*--- header end ------*/
+/*------ content ------- */
+#content {
+  background: url(../imgs/contactus/bg-content.jpg) 0 0 repeat #1f1e21;
+}
+.main-content {
+  padding-bottom: 46px;
+}
+.sub-content {
+  background: url(../imgs/contactus/sub-content.jpg) 0 0 repeat-x;
+  padding-bottom: 46px;
+}
+/* thumbnails */
+.thumbnails {
+  margin-bottom: 0;
+}
+.thumbnails li {
+  margin-bottom: 0px;
+}
+.thumbnails .thumbnail {
+  background: url(../imgs/contactus/thumbnail-bg.png) 0 0 repeat;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  border: none;
+  margin: 28px 0 0 0;
+  padding: 0;
+}
+.thumbnails .thumbnail .caption {
+  padding: 27px 0px 23px 21px;
+  background: url(../imgs/contactus/thumbnail-caption.png) 0 0 repeat-x #161618;
+  -webkit-border-top-right-radius: 6px;
+  -moz-border-radius-topright: 6px;
+  border-top-right-radius: 6px;
+  -webkit-border-top-left-radius: 6px;
+  -moz-border-radius-topleft: 6px;
+  border-top-left-radius: 6px;
+  overflow: hidden;
+}
+.thumbnails .thumbnail h3 {
+  color: #ffffff;
+  font-size: 22px;
+  margin: -3px 0 0 0;
+}
+.thumbnails .thumbnail:hover .caption {
+  background: url(../imgs/contactus/thumbnail-caption.png) 0 -204px repeat-x #ac283a;
+}
+.thumbnails .thumbnail img {
+  float: left;
+  margin-top: -9px;
+}
+.thumbnails .thumbnail h5 {
+  margin: 0;
+}
+.thumbnails .thumbnail:hover h5 {
+  color: #e397a1;
+}
+.thumbnails .thumbnail .thumbnail-pad {
+  padding: 25px 20px 30px 21px;
+}
+.thumbnails .thumbnail a.btn_ {
+  margin-top: 3px;
+  background: #171619;
+}
+.thumbnails .thumbnail a.btn_:hover {
+  background: #cf3046;
+  color: #ffffff;
+}
+.thumbnails .thumbnail_1 a.btn_ {
+  margin-top: 3px;
+  background: #cf3046;
+  color: #ffffff;
+}
+.thumbnails .thumbnail_1 a.btn_:hover {
+  background: #171619;
+}
+/**/
+/* thumbnails_2 */
+.thumbnails_2 {
+  margin: 0px 0 0 -25px;
+  padding-top: 8px;
+}
+.thumbnails_2 li.thumbnail_2 {
+  margin: 0px 0px 24px 25px;
+  padding: 0;
+  display: block;
+  float: left;
+  width: 137px;
+}
+.thumbnails_2 .thumbnail_2 figure {
+  margin: 0px 0 16px 0;
+}
+.thumbnails_2 li.thumbnail_2 .text-info {
+  color: #ffffff;
+}
+/**/
+/*lists*/
+.lists {
+  overflow: hidden;
+}
+.lists ul {
+  margin-top: 15px;
+}
+.lists-width2 {
+  overflow: hidden;
+  margin-left: -15px;
+}
+.lists-width2 ul {
+  margin-left: 15px;
+  margin-top: 33px;
+  width: 140px;
+  float: left;
+}
+/**/
+/*banners*/
+.banners {
+  margin: 0 0 0px -30px;
+  overflow: hidden;
+}
+.banners li {
+  margin-left: 30px;
+  float: left;
+  display: inline-block;
+  margin-top: 18px;
+}
+/**/
+/* thumbnail_3 */
+.thumbnails_3 {
+  margin: 0px 0 0 0px;
+}
+.thumbnails_3 .thumbnail_3 {
+  margin: 27px 0 0px 0px;
+}
+.thumbnails_3 .thumbnail_3 {
+  background: transparent;
+  border: none;
+  padding: 0;
+  display: block;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+.thumbnails_3 .thumbnail_3 figure {
+  margin: 0px 0 15px 0;
+}
+.thumbnails_3 .thumbnail_3 figure img {
+  width: 100%;
+}
+/**/
+/* thumbnail_4 */
+.thumbnails_4 {
+  margin: 0px 0 0 0px;
+}
+.thumbnails_4 .thumbnail_4 {
+  margin: 27px 0 10px 0px;
+}
+.thumbnails_4 .thumbnail_4 {
+  background: none;
+  border: none;
+  padding: 0;
+  display: block;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+.thumbnails_4 .thumbnail_4 figure {
+  margin: 0px 0 15px 0;
+}
+.thumbnails_4 .thumbnail_4 figure img {
+  width: 100%;
+}
+/**/
+/*list-news*/
+.list-news {
+  margin: 0 0 0 0;
+  padding-top: 6px;
+}
+.list-news li {
+  display: block;
+  margin-top: 30px;
+}
+.list-news li:first-child {
+  margin-top: 0 !important;
+}
+.list-news li .text-info {
+  margin-top: 15px;
+}
+.list-news li a.btn_ {
+  margin-top: 0;
+}
+/**/
+/*list-services*/
+.list-services {
+  margin: 0 0 0 -40px;
+}
+.list-services li {
+  display: block;
+  float: left;
+  overflow: hidden;
+  margin-top: 20px;
+  width: 330px;
+  margin-left: 40px;
+  min-height: 180px;
+}
+.list-services li > div {
+  overflow: hidden;
+}
+.list-services li img {
+  float: left;
+  margin-top: 0px;
+}
+/**/
+.text-block-1 {
+  padding-top: 7px;
+}
+.text-block-1 div {
+  overflow: hidden;
+  padding-bottom: 5px;
+}
+.text-block-1 img {
+  float: left;
+  margin-right: 20px;
+  width: auto;
+}
 /*-- contacts page --*/
 .map {
   padding: 7px 0 9px 0;
@@ -210,7 +749,6 @@ address span {
 }
 .contact-form {
   padding-top: 11px;
-    color: white;
 }
 .contact-form input {
   color: #c4c3c4;
@@ -351,7 +889,112 @@ address span {
 /**/
 /*-- end contacts --*/
 /*--- content end ------*/
-
+/*------ footer ------- */
+footer {
+  padding: 26px 0 38px 0;
+  background: url(../imgs/contactus/footer.jpg) 0 0 repeat-x;
+  color: #8e8e8e;
+}
+footer .span8 > a {
+  text-decoration: underline;
+  color: #cf3046;
+}
+footer .span8 > a:hover {
+  text-decoration: underline;
+  color: #ffffff;
+}
+.footer-menu {
+  display: block;
+  border-bottom: #373638 1px solid;
+  width: 370px;
+  padding: 12px 0 47px 0;
+  margin: 0 0 27px 0;
+}
+.footer-menu li {
+  display: inline-block;
+  float: left;
+  color: #373739;
+  font-size: 11px;
+  line-height: 15px;
+}
+.footer-menu li a {
+  margin: 0 12px;
+  color: #8e8e8e;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.footer-menu li:first-child a {
+  margin-left: 0;
+}
+.footer-menu li a:hover,
+.footer-menu li a.current {
+  text-decoration: underline;
+}
+/* form newsletter */
+form#newsletter {
+  margin: 0;
+  background: url(../imgs/contactus/newsletter-bg.png) 0 0 repeat;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  padding: 25px 27px 28px 28px;
+}
+form#newsletter input {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-border-top-right-radius: 0px;
+  -moz-border-radius-topright: 0px;
+  border-top-right-radius: 0px;
+  -webkit-border-bottom-right-radius: 0px;
+  -moz-border-radius-bottomright: 0px;
+  border-bottom-right-radius: 0px;
+  border: none;
+  background: #fff;
+  color: #1e1d20;
+  margin: 0;
+  box-shadow: none;
+  height: 30px;
+  line-height: 15px;
+  padding: 7px 10px 8px 10px;
+  width: 154px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  float: left;
+}
+form#newsletter input:focus {
+  box-shadow: none;
+}
+form#newsletter a.btn_ {
+  margin-top: 0;
+  width: 91px;
+  text-align: center;
+  padding-right: 0;
+  padding-left: 0;
+  -webkit-border-top-left-radius: 0px;
+  -moz-border-radius-topleft: 0px;
+  border-top-left-radius: 0px;
+  -webkit-border-bottom-left-radius: 0px;
+  -moz-border-radius-bottomleft: 0px;
+  border-bottom-left-radius: 0px;
+}
+form#newsletter a.btn_:hover {
+  color: #ffffff;
+  background: #171619;
+}
+form#newsletter label {
+  font-family: "Open Sans", sans-serif;
+  color: #ffffff;
+  font-weight: bold;
+  line-height: 22px;
+  font-size: 18px;
+  margin-bottom: 16px;
+  display: block;
+  text-transform: none;
+}
+/**/
+/*--- footer end ------*/
 /*----- media queries ------*/
 @media (min-width: 1200px) {
   .camera_wrap .camera_pag {
