--- a/css/template.css
+++ b/css/template.css
@@ -64,7 +64,7 @@ nav a.navList {
 
 
 footer {
-  /*position: absolute;*/
+  position: relative;
   bottom: 0;
   width: 100%;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.99)),
