--- a/css/template.css
+++ b/css/template.css
@@ -10,7 +10,6 @@ body {
 
 
 .logo {
-    /*background-image: url("./../imgs/background.png");*/
     background-color: white;
     margin-top: 4%;
     resize: both;
@@ -65,7 +64,9 @@ nav a.navList {
 
 footer {
   position: relative;
+  right: 0;
   bottom: 0;
+  left: 0;
   width: 100%;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.99)),
     url("./../imgs/pattern.png");
